add data to .env.dist

--- a/ci/docker/.env.dist
+++ b/ci/docker/.env.dist
@@ -1,9 +1,10 @@
 # Docker env
 COMPOSE_PROJECT_NAME=the_way_of_the_sword
-COMPOSE_FILE=
+COMPOSE_FILE=compose.yml:compose.local.yml # local
+COMPOSE_FILE=compose.yml # prod
 
 # App env
-DSN__DATABASE=
+DSN__DATABASE=postgresql+asyncpg://login:pass@the_way_of_the_sword-db:5432/the_way_of_the_sword
 DSN__RABBITMQ=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
@@ -12,3 +13,4 @@ RABBITMQ_DEFAULT_USER=
 RABBITMQ_DEFAULT_PASS=
 WEBHOOK_DOMAIN=
 BOT_TOKEN=
+SALT=
