add admin_user script + qr start

--- a/ci/docker/.env.dist
+++ b/ci/docker/.env.dist
@@ -5,7 +5,7 @@ COMPOSE_FILE=compose.yml # prod
 
 # App env
 DSN__DATABASE=postgresql+asyncpg://login:pass@the_way_of_the_sword-db:5432/the_way_of_the_sword
-DSN__RABBITMQ=
+DSN__RABBITMQ=amqp://user:passw%23rd@the_way_of_the_sword-mq:5672
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
